syntax = "proto3";

package ark.v1;

import "google/api/annotations.proto";
import "ark/v1/types.proto";

service ExplorerService {
  rpc GetCommitmentTxInfo(GetCommitmentTxInfoRequest) returns (GetCommitmentTxInfoResponse) {
    option (google.api.http) = {
      get: "/v1/commitmentTx/{txid}"
    };
  };
  rpc GetVtxoTree(GetVtxoTreeRequest) returns (GetVtxoTreeResponse) {
    option (google.api.http) = {
      get: "/v1/batch/{batch_outpoint.txid}/{batch_outpoint.vout}/tree"
    };
  };
  rpc GetForfeitTxs(GetForfeitTxsRequest) returns (GetForfeitTxsResponse) {
    option (google.api.http) = {
      get: "/v1/batch/{batch_outpoint.txid}/{batch_outpoint.vout}/forfeitTxs"
    };
  };
  rpc GetConnectors(GetConnectorsRequest) returns (GetConnectorsResponse) {
    option (google.api.http) = {
      get: "/v1/batch/{batch_outpoint.txid}/{batch_outpoint.vout}/connectors"
    };
  };
  rpc GetSpendableVtxos(GetSpendableVtxosRequest) returns (GetSpendableVtxosResponse) {
    option (google.api.http) = {
      get: "/v1/vtxos/{address}"
    };
  };
  rpc GetTransactionHistory(GetTransactionHistoryRequest) returns (GetTransactionHistoryResponse) {
    option (google.api.http) = {
      get: "/v1/history/{address}"
    };
  };
  rpc GetTransactionChain(GetTransactionChainRequest) returns (GetTransactionChainResponse) {
    option (google.api.http) = {
      get: "/v1/vtxo/{outpoint.txid}/{outpoint.vout}/chain"
    };
  }
}

message GetCommitmentTxInfoRequest {
  string txid = 1;
}
message GetCommitmentTxInfoResponse {
  string tx = 1;
  int64 started_at = 2;
  int64 ended_at = 3;
  map<uint32, Batch> batches = 4;
}

message GetVtxoTreeRequest {
  Outpoint batch_outpoint = 1;
  PageRequest page = 2;
}
message GetVtxoTreeResponse {
  repeated FlatNode vtxo_tree = 1;
  PageResponse page = 2;
}

message GetForfeitTxsRequest {
  Outpoint batch_outpoint = 1;
  PageRequest page = 2;
}
message GetForfeitTxsResponse {
  repeated string txs = 1;
  PageResponse page = 2;
}

message GetConnectorsRequest {
  Outpoint batch_outpoint = 1;
  PageRequest page = 2;
}
message GetConnectorsResponse {
  repeated FlatNode connectors = 1;
  PageResponse page = 2;
}

message GetSpendableVtxosRequest {
  string address = 1;
  PageRequest page = 2;
}
message GetSpendableVtxosResponse {
  repeated Vtxo vtxos = 1;
  PageResponse page = 2;
}

message GetTransactionHistoryRequest {
  string address = 1;
  int64 start_time = 2;
  int64 end_time = 3;
  PageRequest page = 4;
}
message GetTransactionHistoryResponse {
  repeated TxHistoryRecord history = 1;
  PageResponse page = 2;
}

message GetTransactionChainRequest {
  Outpoint outpoint = 1;
  PageRequest page = 2;
}
message GetTransactionChainResponse {
  repeated string txs = 1;
  PageResponse page = 2;
}